--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
   "description": "stop opening naughty sites accidentally",
   "author": "David Keeler <dkeeler@mozilla.com>, Monica Chew <mmc@mozilla.com>, Gregg Lind <glind@mozilla.com>",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "0.1",
+  "dependencies": [
+    "micropilot"
+  ],
+  "volo": {
+    "dependencies": {
+      "packages/micropilot": "github:gregglind/micropilot/v0.8"
+    }
+  }
 }
