--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "blushproof",
   "fullName": "Blushproof",
-  "id": "blushproof@ux.mozilla.com",
+  "id": "blushproof@mozilla.org",
   "description": "Stop opening embarrassing sites accidentally",
-  "author": "David Keeler <dkeeler@mozilla.com>, Monica Chew <mmc@mozilla.com>, Gregg Lind <glind@mozilla.com>",
+  "author": "David Keeler, Monica Chew, Gregg Lind",
   "license": "MPL 2.0",
   "version": "0.9",
   "dependencies": [
+    "addon-sdk",
     "micropilot"
   ],
   "preferences": [
@@ -25,7 +26,7 @@
   ],
   "volo": {
     "dependencies": {
-      "packages/micropilot": "github:gregglind/micropilot/v0.8"
+      "packages/micropilot": "github:gregglind/micropilot/v0.10.0"
     }
   }
 }
